--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
 }
 
 .container {
@@ -163,6 +165,12 @@ body {
     text-align: center;
 }
 
+.pinput::-webkit-outer-spin-button,
+.pinput::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 .pinput::placeholder {
     color: #90C7A7;
 }   
@@ -214,3 +222,12 @@ body {
     transition: 500ms ease-in-out;
     cursor: pointer;
 }
+
+.active {
+    background-color: #90C7A7;
+    color: white;
+    transition: 500ms ease-in-out;
+    cursor: pointer;
+}
+
+
